--- a/package.json
+++ b/package.json
@@ -9,6 +9,29 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.3"
+    "@astrojs/react": "^4.2.4",
+    "@gsap/react": "^2.1.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/flex": "^1.0.1",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.1.0",
+    "@react-three/rapier-addons": "^5.0.0",
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "astro": "^5.7.4",
+    "glslify": "^7.1.1",
+    "gsap": "^3.12.7",
+    "matter-js": "^0.20.0",
+    "postprocessing": "^6.37.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.5",
+    "three": "^0.175.0"
+  },
+  "devDependencies": {
+    "@astrojs/cloudflare": "^12.5.2"
   }
 }
