Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
   },
   "devDependencies": {
     "wrangler": "^4.14.3"
-  }
+  },
+  "packageManager": "pnpm@8.7.1+sha512.41bb77121614697152da4e052d003baf6fde633fc9a03786ebcd3fdd45c6d066b4dcb3ee6381a076f08b7beccedcced99d61b8548e1b03093b4292727ebe5ea8"
 }
